Fix broken header UI on mobile

--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 45rem;
     padding: 0 1rem;
-    margin: 3rem auto 6rem;
+    margin: 4rem auto 6rem;
 }
 
 .header {
@@ -15,6 +15,7 @@
     width: 100%;
     background-color: var(--background-color);
     z-index: 100;
+    height: var(--header-height);
 
     transition: all 0.3s ease-out;
 }
@@ -40,10 +41,9 @@
 
 @media (max-width: 550px) {
     .header {
-        flex-direction: column;
+        font-size: 1rem;
     }
     .container {
-        margin: 1rem auto 6rem;
         font-size: 12px;
     }
 }
