--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,7 @@
   --background-color: black;
   --font-color: white;
   --link-color: #1976d2;
+  --header-height: 60px;
 }
 
 html,
