--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -111,7 +111,7 @@
 
 @media (max-width: 550px) {
     .headingXl {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     .headingLg {
